proj1/edu/purdue/cs352/minijava/parser/Lexer.jj
options {
  JAVA_UNICODE_ESCAPE = true;
  STATIC = false;
}

PARSER_BEGIN(Lexer)
    package edu.purdue.cs352.minijava.parser;

    import java.util.*;

    public class Lexer {
        public static void main(String[] args) {
            Lexer lexer;
            List<Token> tl;

            if (args.length != 1) {
                System.out.println("Use: mjlex <input file>");
                return;
            }

            try {
                lexer = new Lexer(new java.io.FileInputStream(args[0]));
            } catch (java.io.FileNotFoundException ex) {
                System.out.println("File " + args[0] + " not found.");
                return;
            }

            try {
                tl = lexer.TokenList();
            } catch (ParseException ex) {
                System.out.println(ex.getMessage());
                return;
            }

            for (Token tok : tl) {
                System.out.println(tok);
            }
        }
    }
PARSER_END(Lexer)

// Lexical definitions

// Whitespace
SKIP :
{
    < " " | "\t" | "\n" | "\r" >
}

// Comments
SKIP :
{
    < "//" (~["\n"])* "\n" >
|   < ("/*") (~["*"]|(("*")+ ~["*","/"]))*  ("*")+ "/" >
}

// MiniJava keywords
TOKEN :
{
    < KW_CLASS: "class" >
|   < KW_PUBLIC: "public" >
|   < KW_STATIC: "static" >
|   < KW_VOID: "void" >
|   < KW_MAIN: "main" >
|   < KW_STRING: "String" >
|   < KW_EXTENDS: "extends" >
|   < KW_RETURN: "return" >
|   < KW_INT: "int" >
|   < KW_BOOLEAN: "boolean" >
|   < KW_IF: "if" >
|   < KW_ELSE: "else" >
|   < KW_WHILE: "while" >
|   < KW_TRUE: "true" >
|   < KW_FALSE: "false" >
|   < KW_THIS: "this" >
|   < KW_NEW: "new" >
|   < KW_PRINT: "System.out.println" >
}

// MiniJava symbols
TOKEN :
{
    < SYM_LBRACE: "{" >
|   < SYM_RBRACE: "}" >
|   < SYM_LPAREN: "(" >
|   < SYM_RPAREN: ")" >
|   < SYM_LBRACKET: "[" >
|   < SYM_RBRACKET: "]" >
|   < SYM_SEMICOLON: ";" >
|   < SYM_EQUAL: "=" >
|   < SYM_AND: "&&" >
|   < SYM_OR: "||" >
|   < SYM_LESS: "<" >
|   < SYM_LESS_EQUAL: "<=" >
|   < SYM_EQUALS: "==" >
|   < SYM_NOT_EQUALS: "!=" >
|   < SYM_GREATER: ">" >
|   < SYM_GREATER_EQUALS: ">=" >
|   < SYM_PLUS: "+" >
|   < SYM_MINUS: "-" >
|   < SYM_MULTIPLY: "*" >
|   < SYM_DIVIDE: "/" >
|   < SYM_MOD: "%" >
|   < SYM_NOT: "!" >
|   < SYM_DOT: "." >
|   < SYM_COMMA: "," >
}

// Identifiers
TOKEN :
{
    < IDENTIFIER: (["a"-"z"]|["A"-"Z"]|"_")(["a"-"z"]|["A"-"Z"]|["0"-"9"]|"_")* >
}

// Integer literals
TOKEN :
{
    < INT_LITERAL: (["0"-"9"])* >
}

/* The following is a simple grammar that will allow you to test the generated
 * lexer. */
List<Token> TokenList() :
{
    Token t;
    List<Token> tl = new ArrayList<Token>();
}
{

    (
        t = Token()
        { tl.add(t); }
    )*
    <EOF>
    { return tl; }
}

Token Token():
{}
{
    (
    <IDENTIFIER>
|   <INT_LITERAL>
|   < KW_CLASS>
|   < KW_PUBLIC>
|   < KW_STATIC>
|   < KW_VOID>
|   < KW_MAIN>
|   < KW_STRING>
|   < KW_EXTENDS>
|   < KW_RETURN>
|   < KW_INT>
|   < KW_BOOLEAN>
|   < KW_IF>
|   < KW_ELSE>
|   < KW_WHILE>
|   < KW_TRUE>
|   < KW_FALSE>
|   < KW_THIS>
|   < KW_NEW>
|   < KW_PRINT>
|   < SYM_LBRACE>
|   < SYM_RBRACE>
|   < SYM_LPAREN>
|   < SYM_RPAREN>
|   < SYM_LBRACKET>
|   < SYM_RBRACKET>
|   < SYM_SEMICOLON>
|   < SYM_EQUAL>
|   < SYM_AND>
|   < SYM_OR>
|   < SYM_LESS>
|   < SYM_LESS_EQUAL>
|   < SYM_EQUALS>
|   < SYM_NOT_EQUALS>
|   < SYM_GREATER>
|   < SYM_GREATER_EQUALS>
|   < SYM_PLUS>
|   < SYM_MINUS>
|   < SYM_MULTIPLY>
|   < SYM_DIVIDE>
|   < SYM_MOD>
|   < SYM_NOT>
|   < SYM_DOT>
|   < SYM_COMMA>
    )
    { return token; }
}
